cps for the win: backtracking works. tests pass.
(still using java.util.regex for String.replace)

--- a/src/test/scala/scala/virtualization/lms/regexp/v8regexp.html
+++ b/src/test/scala/scala/virtualization/lms/regexp/v8regexp.html
@@ -50,7 +50,7 @@
       var printKey = true
       var printRes = true
       
-      var profile = true
+      var profile = false
       
       function log(key, res) {
         if (count < 50000 && !(key in seen)) {
